--- a/Cinestar-app/CityPickerPage.xaml
+++ b/Cinestar-app/CityPickerPage.xaml
@@ -42,15 +42,19 @@
                 </ListView.ItemTemplate>
             </ListView>
 
-            <Label Text="Koristi moju lokaciju"
-                   FontAttributes="Bold"
+            <BoxView HeightRequest="1"
+         Color="#3e3e57"
+         Margin="0,0,0,0"
+         HorizontalOptions="FillAndExpand"/>
+
+            <Label Text="KORISTI MOJU LOKACIJU"
                    FontSize="20"
                    TextColor="White"
                    TextDecorations="Underline"    
                    HorizontalOptions="Center"
                    VerticalOptions="Center"
-                   Margin="20,10"
                    Padding="10"
+                   Margin="0,0,0,20"
                    InputTransparent="False">
                
 
