--- a/Cinestar-app/Profil.xaml
+++ b/Cinestar-app/Profil.xaml
@@ -3,61 +3,99 @@
              x:Class="Cinestar_app.Profil"
              Title=""
              BackgroundColor="#051851">
+    <Grid>
+        <Image Source="pozadinskaslika.jpg"
+               Aspect="AspectFill"/>
+        <ScrollView >
+        <VerticalStackLayout Padding="20" Spacing="15" >
 
-    <ScrollView>
-        <VerticalStackLayout Padding="20" Spacing="15" BackgroundColor="#051851" VerticalOptions="Center">
-
-            <Label Text="PRIJAVA"
+            <Label Text="Prijava"
                    FontSize="24"
                    HorizontalOptions="Center"
+                   VerticalOptions="Start"
+                   Margin="0,30,0,0"
                    TextColor="White"
                    FontFamily="Arial"
                    Padding="10"/>
             <BoxView HeightRequest="1" 
-                     BackgroundColor="#FFD700" 
+                     BackgroundColor="White" 
                      HorizontalOptions="FillAndExpand"
                      Margin="5,5"/>
 
-            <!-- Email Entry -->
-            <Entry x:Name="EmailEntry"
-                   Placeholder="Unesite svoj email"
-                   Keyboard="Email"
-                   TextColor="White"
-                   PlaceholderColor="#AAAAAA"
-                   BackgroundColor="#0A1B3A"
-                   HeightRequest="50"
-                   HorizontalOptions="FillAndExpand"
-                   Margin="0,10"
-                   />
 
-            <!-- Lozinka Entry -->
-            <Entry x:Name="LozinkaEntry"
-                   Placeholder="Unesite lozinku"
-                   IsPassword="True"
-                   TextColor="White"
-                   PlaceholderColor="#AAAAAA"
-                   BackgroundColor="#0A1B3A"
-                   HeightRequest="50"
-                   HorizontalOptions="FillAndExpand"
-                   Margin="0,10"/>
 
-            <!-- Buttoni -->
-            <Button Text="Prijavi se"
-                    BackgroundColor="#FFD700"
+                <Frame
+    Padding="0"
+    BackgroundColor="#051851"
+    CornerRadius="20"
+    HasShadow="False">
+                    <Entry
+        x:Name="EmailEntry"
+        Placeholder="Unesite svoj email"
+        Keyboard="Email"
+        TextColor="White"
+        PlaceholderColor="#AAAAAA"
+        BackgroundColor="Transparent"
+        FontSize="13"
+        HeightRequest="35"
+        VerticalTextAlignment="Center"
+        Margin="12,0"
+        />
+        </Frame>
+            
+            
+        <Frame
+        Padding="0"
+        BackgroundColor="#051851"
+        CornerRadius="20"
+        HasShadow="False">
+
+        <Entry
+    x:Name="LozinkaEntry"
+    Placeholder="Unesite svoju lozinku"
+    IsPassword="True"
+    TextColor="White"
+    PlaceholderColor="#AAAAAA"
+    BackgroundColor="Transparent"
+    FontSize="13"
+    HeightRequest="35"
+    VerticalTextAlignment="Center"
+    Margin="12,0"
+    />
+    </Frame>
+                
+              
+                <!-- Buttoni -->
+
+               
+                     <Button Text="Prijavi se"
+                    BackgroundColor="#0a0733"
                     TextColor="White"
                     Clicked="Prijava_Clicked"
                     FontFamily="Arial"
-                    Margin="10"
-                    />
-
-            <Button Text="Registruj se"
-                    BackgroundColor="#FFD700"
-                    TextColor="White"
-                    Clicked="Registracija_Clicked"
-                    FontFamily="Arial"
+                    CornerRadius="15"
+                    WidthRequest="200"
                     Margin="5,0"
-                    />
+                    /> 
+            <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
+                    <Label Text="Nemate profil?"
+                           VerticalOptions="Center"
+                           FontSize="11"
+                           Margin="10,0,5,0"/>
+                    <Label Text="Registruj se"
+                       VerticalOptions="Center"
+                       TextDecorations="Underline"
+                           FontSize="12"
+       InputTransparent="False">
+                    <Label.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="Registracija_Clicked"/>
+                    </Label.GestureRecognizers>
+                </Label>
+</StackLayout>
+
+              
 
         </VerticalStackLayout>
     </ScrollView>
+    </Grid>
 </ContentPage>
