--- a/Cinestar-app/App.xaml
+++ b/Cinestar-app/App.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:converters="clr-namespace:Cinestar_app.Converters"
              x:Class="Cinestar_app.App">
     <Application.Resources>
         <ResourceDictionary>
@@ -25,6 +26,7 @@
                 <Setter Property="Margin" Value="5"/>
                 <Setter Property="BackgroundColor" Value="{StaticResource PrimaryBlue}"/>
             </Style>
+            <converters:QrCodeConverter x:Key="QrConverter"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
