--- a/Cinestar-app/FilmDetalji.xaml
+++ b/Cinestar-app/FilmDetalji.xaml
@@ -1,7 +1,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:models="clr-namespace:Cinestar_app.Models"
-             x:Class="Cinestar_app.FilmDetalji">
+             x:Class="Cinestar_app.FilmDetalji"
+             Title=" ">
 
     <!-- ISTA GRADIENT POZADINA KAO OSTALE STRANICE -->
     <ContentPage.Background>
@@ -14,18 +15,15 @@
     <ScrollView>
         <VerticalStackLayout Padding="20" Spacing="20">
 
-            <!-- POSTER -->
             <Image x:Name="PosterImage"
                    HeightRequest="300"
                    Aspect="AspectFill"/>
 
-            <!-- NASLOV -->
             <Label x:Name="TitleLabel"
                    FontSize="26"
                    FontAttributes="Bold"
                    TextColor="White"/>
 
-            <!-- OPIS -->
             <Label x:Name="PlotLabel"
                    FontSize="14"
                    TextColor="White"/>
