--- a/Cinestar-app/RezervacijaPage.xaml
+++ b/Cinestar-app/RezervacijaPage.xaml
@@ -1,6 +1,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:system="clr-namespace:System;assembly=mscorlib"
+             x:Name="Page"
              x:Class="Cinestar_app.RezervacijaPage">
 
     <!-- ISTA GRADIENT POZADINA -->
@@ -53,6 +54,9 @@
                    FontSize="18"
                    FontAttributes="Bold"
                    TextColor="#FFD200"/>
+            
+            
+      
 
             <HorizontalStackLayout Spacing="15">
                 <Stepper x:Name="TicketStepper"
@@ -66,6 +70,35 @@
                        FontSize="16"
                        VerticalOptions="Center"/>
             </HorizontalStackLayout>
+
+
+
+
+            <FlexLayout
+    BindableLayout.ItemsSource="{Binding Seats}"
+    Direction="Row"
+    Wrap="Wrap"
+               
+   >
+
+                <BindableLayout.ItemTemplate>
+                    <DataTemplate>
+                        <Image
+                Source="{Binding Image}"
+                WidthRequest="30"
+                            Margin="2">
+                            <Image.GestureRecognizers>
+                                <TapGestureRecognizer
+                        Command="{Binding BindingContext.SeatTappedCommand, Source={x:Reference Page}}"
+                        CommandParameter="{Binding .}" />
+                            </Image.GestureRecognizers>
+                        </Image>
+                    </DataTemplate>
+                </BindableLayout.ItemTemplate>
+
+            </FlexLayout>
+
+
 
             <!-- GUMB ZA POTVRDU -->
             <Button Text="Potvrdi rezervaciju"
